Features and fixes